--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,8 +2,10 @@ fastapi
 uvicorn[standard]
 sqlalchemy>=1.4
 asyncpg
+aiosqlite
 alembic
 pydantic
+pydantic-settings
 python-jose[cryptography]
 passlib[bcrypt]
 databases
